# BIPLANES

./: README.md  create_assets.py  settings.gradle.kts  update_assets.py
.claude/: settings.local.json
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/abocha/byplanes/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AIController.cpp  AIController.h  Background.cpp  Background.h  BluetoothBridge.cpp  BluetoothBridge.h  BluetoothVirtualServer.cpp  BluetoothVirtualServer.h  CMakeLists.txt  Game.cpp  Game.h  GameConstants.h  GameSession.cpp  GameSession.h  GameState.h  HUD.cpp  HUD.h  InputManager.cpp  InputManager.h  Plane.cpp  Plane.h  Projectile.cpp  Projectile.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  SoundEngine.cpp  SoundEngine.h  Sprite.cpp  Sprite.h  TextureAsset.cpp  Utility.cpp  Utility.h  main.cpp
app/src/main/java/com/abocha/byplanes/: BluetoothManager.kt  MainActivity.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/abocha/byplanes/: ExampleUnitTest.kt
docs/: functional_requirements.md  qa_report.md  test_scenarios.md  user_stories.md  ux_review.md  ux_spec.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
